Portfolio - all tests passed - no media querries on grid - bug on grid alignment - correct result on desktop

--- a/Responsive_web_design/Responsive_Web_Design_Projects/Personal_Portfolio_Webpage/styles.css
+++ b/Responsive_web_design/Responsive_Web_Design_Projects/Personal_Portfolio_Webpage/styles.css
@@ -96,11 +96,15 @@ header {
 	background-color: var(--main-red);
 	width: 100vw;
 	height: 7.5vh;
+
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 nav {
 	height: 100%;
-	margin-left: 70vw;
+	margin-left: 85vw;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -112,7 +116,7 @@ nav {
 .welcome-section {
 	background-color: #000;
 	background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-	height: 92.5vh;
+	height: 100vh;
 	width: 100vw;
 	display: flex;
 	justify-content: center;
@@ -125,4 +129,110 @@ nav {
 	font-weight: 200;
 	font-style: italic;
 	color: var(--main-red);
+}
+
+/* projects section */
+#projects {
+	width: 100vw;
+	text-align: center;
+	padding: 10rem 2rem;
+	background: var(--main-blue);
+}
+
+#projects h2 {
+	margin-bottom: 5vh;
+	text-decoration: underline;
+}
+
+.projects-grid {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	column-gap: 5vw;
+	row-gap: 5vh;
+	align-items: center;
+	justify-items: center;
+}
+
+.project-title {
+	font-size: 2.5rem;
+	font-weight: 200;
+	color: var(--main-white);
+	background-color: var(--main-gray);
+	padding: 1rem;
+}
+
+.grid-elem:nth-child(1) {
+	grid-area: 1 / 2 / 2 / 3;
+}
+
+.grid-elem:nth-child(2) {
+	grid-area: 1 / 3 / 2 / 4;
+}
+
+.grid-elem:nth-child(3) {
+	grid-area: 1 / 4 / 2 / 5;
+}
+
+.grid-elem:nth-child(4) {
+	grid-area: 2 / 2 / 3 / 3;
+}
+
+.grid-elem:nth-child(5) {
+	grid-area: 2 / 3 / 3 / 4;
+}
+
+.grid-elem:nth-child(6) {
+	grid-area: 2 / 4 / 3 / 5;
+}
+
+.grid-elem {
+	background-color: var(--main-gray);
+}
+
+/* contact section */
+.contact-section {
+	background-color: var(--main-gray);
+	height: 90vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.contact-section-header {
+	color: var(--main-white);
+	font-size: 5rem;
+	font-weight: 200;
+	margin-bottom: 5vh;
+	text-align: center;
+}
+
+.contact-section-header p {
+	font-size: 2.5rem;
+}
+
+.contact-links {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 50%;
+	font-size: 2.5rem;
+}
+
+/* footer */
+footer {
+	background-color: var(--main-gray);
+	width: 100vw;
+	height: 10vh;
+	border-top: 5px solid var(--main-red);
+}
+
+footer div {
+	width: 80vw;
+	margin: 2.5vh 10vw 0 auto;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
